[package]
name = "hls-download"
version = "0.1.0"
authors = ["anatawa12 <anatawa12@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8" }
m3u8-rs = "1.0.6"
aes = "0.6.0"
block-modes = "0.7.0"
hex = "0.4.2"
tempdir = "0.3.7"
base64 = "0.13.0"
indicatif = "0.15.0"
bytes = "0.5"

[dependencies.tokio]
version = "0.2.5"
features = ["full"]
